[package]
name = "Transformer"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow-array = { version = "50"}
arrow-schema = { version = "50" }
parquet = { version = "50" }
chrono = "0.4"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
rayon = "1.8"

[lib]
name = "lib"
path = "src/lib.rs"